--- a/src/components/Tr/styles.module.css
+++ b/src/components/Tr/styles.module.css
@@ -1,3 +1,23 @@
-.tr{
-   
+.tr:hover {
+    background-color: var(--focus) !important;
+}
+  
+.tr:nth-child(odd) {
+    background-color: var(--table-zebra);
+}
+
+.tr:nth-child(even) {   
+    background-color: var(--white);
+}
+
+.center {
+    text-align: center;
+}
+
+.left {
+    text-align: left;
+}
+
+.right {
+    text-align: right;
 }
